--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Unzip project
         run: |
-          unzip "CinemaBRtv_Android_Project (1).zip"
+          unzip CinemaBrtv.zip
           PROJECT_DIR=$(find . -name gradlew -type f | sed 's|/gradlew||')
           echo "PROJECT_DIR=$PROJECT_DIR" >> $GITHUB_ENV
 
