--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,19 @@ jobs:
       - name: Install unzip
         run: sudo apt-get install unzip -y
 
-      - name: Find and unzip project
+      - name: Unzip project
         run: |
           ZIP_FILE=$(ls *.zip | head -n 1)
-          echo "Using ZIP: $ZIP_FILE"
           unzip "$ZIP_FILE"
-          PROJECT_DIR=$(find . -name gradlew -type f | sed 's|/gradlew||')
-          echo "PROJECT_DIR=$PROJECT_DIR" >> $GITHUB_ENV
+          ROOT_DIR=$(ls -d */ | head -n 1)
+          echo "ROOT_DIR=$ROOT_DIR" >> $GITHUB_ENV
+
+      - name: Show extracted files (debug)
+        run: |
+          echo "Root dir:"
+          ls -la
+          echo "Inside root:"
+          ls -la $ROOT_DIR
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -29,16 +35,14 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Grant Gradle permission
-        run: chmod +x $PROJECT_DIR/gradlew
-
-      - name: Build Debug APK
+      - name: Build APK
         run: |
-          cd $PROJECT_DIR
+          cd $ROOT_DIR
+          chmod +x gradlew
           ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: CinemaBRtv-APK
-          path: ${{ env.PROJECT_DIR }}/app/build/outputs/apk/debug/app-debug.apk
+          path: ${{ env.ROOT_DIR }}/app/build/outputs/apk/debug/app-debug.apk
